--- a/07-mock-cc-plantsy/src/index.css
+++ b/07-mock-cc-plantsy/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --green: rgb(39, 189, 39);
+  --red: rgb(255, 87, 51);
 }
 
 * {
@@ -25,6 +26,10 @@ button {
 
 button.primary {
   background-color: var(--green);
+  color: white;
+}
+button.danger {
+  background-color: var(--red);
   color: white;
 }
 
